--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -3,7 +3,7 @@
 {% block title %}GCC! − Girls Can Code!{% endblock %}
 
 {% block content %}
-<article class="container">
+<section>
 	<h1>Bienvenue sur le site de GCC!</h1>
-</article>
+</section>
 {% endblock %}
