--- a/prologin/gcc/static/gcc/css/style.css
+++ b/prologin/gcc/static/gcc/css/style.css
@@ -1,5 +1,6 @@
 body {
 	--accent: #fc7107;
+	--shadow: 0 0 10px rgba(0,0,0,.75);
 	display: grid;
 	/* TODO: use auto-fill instead of a fixed value when this firefox bug is
 	 * fixed: https://bugzilla.mozilla.org/show_bug.cgi?id=1341507
@@ -17,6 +18,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
+	box-shadow: var(--shadow);
+	z-index: 100;
 	height: 56px;
 	position: sticky;
 	top: 0;
@@ -39,6 +42,7 @@ nav {
 	background: #181716;
 	display: flex;
 	justify-content: center;
+	box-shadow: var(--shadow);
 }
 
 nav a {
@@ -59,6 +63,7 @@ main a {
 }
 
 footer {
+	box-shadow: var(--shadow);
 	background: #023770;
 	color: #eeeeee;
 	text-align: center;
@@ -80,6 +85,13 @@ section>* {
 	grid-column: 2/3;
 }
 
+/* homepage photo collage */
+section#collage {
+	background: center fixed url("../img/collage.jpg");
+	background-size: cover;
+	min-height: 70vh;
+}
+
 #social {
 	position: fixed;
 	right: 0;
@@ -90,6 +102,7 @@ section>* {
 }
 
 #social div {
+	box-shadow: var(--shadow);
 	grid-row: 2/3;
 	background: #181716;
 	padding: 9px;
