--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -3,9 +3,8 @@
 {% block title %}GCC! − Girls Can Code!{% endblock %}
 
 {% block content %}
-<section>
+<section id="collage">
 	<!-- Logo et collage -->
-	<h1>Bienvenue sur le site de GCC!</h1>
 	<a href="{% url "home" %}">by Prologin</a>
 </section>
 
