--- a/prologin/gcc/static/gcc/css/style.css
+++ b/prologin/gcc/static/gcc/css/style.css
@@ -1,3 +1,7 @@
+* {
+	transition: all linear 0.1s;
+}
+
 body {
 	--accent: #fc7107;
 	--shadow: 0 0 10px rgba(0,0,0,.75);
@@ -49,6 +53,7 @@ nav a {
 	text-decoration: none;
 	color: #ffffff;
 	padding: 0 1rem;
+	border-color: var(--accent);
 }
 
 nav a:hover{
