--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -26,6 +26,11 @@
 
 <section>
 	<!-- Form signup newsletter -->
+	<form method="post">{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" value="Send message">
+</form>
+
 </section>
 
 <section>
