--- a/prologin/gcc/templates/gcc/team_index.html
+++ b/prologin/gcc/templates/gcc/team_index.html
@@ -17,9 +17,9 @@
 	<h1>Editions de GCC!</h1>
 	<div class="grid">
 		{% for e in editions %}
-		<a href="{% url "gcc:team_edition" e.year %}">
-			<img src="FIXME" alt="Affiche edition {{e.year}}">
+		<a class="edition-container" href="{% url "gcc:team_edition" e.year %}">
 			<h2>{{ e.year }}</h2>
+      <img src="https://gcc.prologin.org/static/pictures/poster_gcc_2018.jpg" alt="Affiche edition {{e.year}}">
 		</a>
 		{% endfor %}
 	</div>
