--- a/prologin/gcc/templates/gcc/application_form.html
+++ b/prologin/gcc/templates/gcc/application_form.html
@@ -14,7 +14,7 @@
 	<form method="post">
     {% csrf_token %}
 		{{ form.as_p }}
-		<input class="halo-button" type="submit" value="Valider">
+		<input class="halo-button" type="submit" value="Valider et choisir mon centre de stage">
 	</form>
 </section>
 {% endblock %}
