--- a/prologin/gcc/templates/gcc/application_index.html
+++ b/prologin/gcc/templates/gcc/application_index.html
@@ -11,113 +11,16 @@
 <section>
   <h2>Liste des candidates pour 2018</h2>
   <ul class="applicant-list">
-    <li>Joseph Marchand</li>
-    <li>Rémi Dupré</li>
-    <li>
-      <span>Joseph Marchand</span>
-      <span class="label-list">
-        <span class="label">another-label</span>
-      </span>
-    </li>
-    <li class="selected">
-      <span>Rémi Dupré</span>
-      <span class="label-list">
-        <span class="label">âge</span>
-        <span class="label">bâclé</span>
-        <span class="label">any-label</span>
-      </span>
-      <div class="detail">
-        <div class="detail-section">
-          <a class="btn" href="#">View complete profile</a>
-          <a class="btn" href="#">Reject all</a>
-        </div>
-        <div class="detail-section">
-          <h1>Profile</h1>
-          <table class="recap">
-            <tr>
-              <td>email</td>
-              <td>email@provider.org</td>
-            </tr>
-            <tr>
-              <td>birthdate</td>
-              <td>10/03/1999</td>
-            </tr>
-            <tr>
-              <td>previous participations</td>
-              <td>none</td>
-            </tr>
-          </table>
-        </div>
-        <div class="detail-section">
-          <h1>Events</h1>
-          <ul style="list-style: decimal;">
-            <li>
-              <span>Paris I <small>(17/05/2018)</small></span>
-              <span style="float:right">
-                <a class="btn btn-little" href="#">accept</a>
-                <a class="btn btn-little" href="#">reject</a>
-              </span>
-            </li>
-            <li>
-              <span>Lyon <small>(10/05/2018)</small></span>
-              <span style="float:right">
-                <a class="btn btn-little" href="#">accept</a>
-                <a class="btn btn-little" href="#">reject</a>
-              </span>
-            </li>
-          </ul>
-        </div>
-        <div class="detail-section">
-          <h1>Comments</h1>
-          Here is a review written by a staff member who already read this application.
-          This could also be implemented like some kind of comment section?
-        </div>
-        <div class="detail-section">
-          <h1>Form</h1>
-          <div class="question">
-            <h5>This is a question ?</h5>
-            <p>
-              This is the answer to a question, this could be quite long so let's lorem ! <br/>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget metus sodales tellus placerat aliquet. Phasellus iaculis erat sed commodo porttitor. Suspendisse ut lectus pretium, elementum eros sit amet, rutrum tellus. Morbi sodales tincidunt diam, id fermentum nisi. Donec at nunc a augue rhoncus sollicitudin. Nulla vulputate, leo convallis mattis iaculis, velit quam hendrerit tellus, quis lacinia tellus elit eu leo. Nam vitae leo at ligula eleifend facilisis in tincidunt turpis. Quisque tempus sem eget diam dignissim, vitae convallis nunc posuere. Nam vel tortor nibh. Nullam pretium mattis ipsum quis mollis. Donec ac vulputate lorem, quis pulvinar lectus.
-            </p>
-            <h5>This is a short question ?</h5>
-            <p>
-              Yes
-            </p>
-            <h5>This is a question ?</h5>
-            <p>
-              This is the answer to a question, this could be quite long so let's lorem ! <br/>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget metus sodales tellus placerat aliquet. Phasellus iaculis erat sed commodo porttitor. Suspendisse ut lectus pretium, elementum eros sit amet, rutrum tellus. Morbi sodales tincidunt diam, id fermentum nisi. Donec at nunc a augue rhoncus sollicitudin. Nulla vulputate, leo convallis mattis iaculis, velit quam hendrerit tellus, quis lacinia tellus elit eu leo. Nam vitae leo at ligula eleifend facilisis in tincidunt turpis. Quisque tempus sem eget diam dignissim, vitae convallis nunc posuere. Nam vel tortor nibh. Nullam pretium mattis ipsum quis mollis. Donec ac vulputate lorem, quis pulvinar lectus.
-            </p>
-            <h5>This is a short question ?</h5>
-            <p>
-              Yes
-            </p>
-            <h5>This is a short question ?</h5>
-            <p>
-              No
-            </p>
-            <h5>This is a short question ?</h5>
-            <p>
-              Yes
-            </p>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li>Joseph Marchand</li>
-    <li>Rémi Dupré</li>
-    <li>Joseph Marchand</li>
-
-
     {% for pk, applicant in applicants.items %}
-      <li class="selected">
-        <span>{{applicant.user.first_name}} {{applicant.user.last_name}}</span>
-        <span class="label-list">
-          <span class="label">âge</span>
-          <span class="label">bâclé</span>
-          <span class="label">any-label</span>
-        </span>
+      <li>
+        <div class="applicant-head">
+          <span>{{applicant.user.first_name}} {{applicant.user.last_name}}</span>
+          <span class="label-list">
+            <span class="label">âge</span>
+            <span class="label">bâclé</span>
+            <span class="label">any-label</span>
+          </span>
+        </div>
         <div class="detail">
           <div class="detail-section">
             <a class="btn" href="#">View complete profile</a>
@@ -173,9 +76,7 @@
       </li>
     {% endfor %}
   </ul>
-
-  {% for pk, applicant in applicants.items %}
-    {{ applicant.user.first_name }}
-  {% endfor %}
 </section>
+
+<script src="{% static "gcc/js/application.js"%}"></script>
 {% endblock %}
