--- a/prologin/gcc/templates/gcc/application_index.html
+++ b/prologin/gcc/templates/gcc/application_index.html
@@ -12,12 +12,14 @@
   <h2>Liste des candidates pour 2018</h2>
   <ul class="applicant-list">
     {% for applicant in applicants %}
-      <li id="applicant-{{applicant.pk}}">
+      <li id="applicant-{{applicant.pk}}" class="selected">
         <div class="applicant-head">
           <span>{{applicant.user.first_name}} {{applicant.user.last_name}}</span>
           <span class="label-list">
             {% for label in applicant.labels.all %}
-            <span class="label">{{ label.display }}</span>
+            <a class="label" href="{% url 'gcc:delete_applicant_label' applicant_id=applicant.pk label_id=label.pk %}">
+              {{ label.display }}
+            </a>
             {% endfor %}
           </span>
         </div>
