Various fixes and renames

--- a/gccsite/gcc/templates/gcc/application/summary.html
+++ b/gccsite/gcc/templates/gcc/application/summary.html
@@ -1,7 +1,7 @@
 {% extends "gcc/base.html" %}
 {% load static %}
 {% load utils %}
-{% load i18n staticfiles rules %}
+{% load i18n staticfiles %}
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}" />
