--- a/gccsite/users/templates/users/profile.html
+++ b/gccsite/users/templates/users/profile.html
@@ -1,21 +1,23 @@
-{% extends "prologin/base.html" %}
+{% extends "gcc/base.html" %}
+{% load static %}
+{% load utils %}
 {% load i18n staticfiles rules %}
-{% load django_bootstrap_breadcrumbs utils %}
 
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "" %}{% trans "Members" %}{% endbreadcrumb_for %}
-  {% breadcrumb shown_user "users:profile" shown_user.id %}
-{% endblock breadcrumbs %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}" />
+{% endblock %}
 
-{% block title %}{% blocktrans with shown_user.username as username %}{{ username }}{% endblocktrans %}{% endblock %}
+{% block title %}{% trans "GCC! - Profile" %}{% endblock %}
 
 {% block content %}
+<section class="wrapper">
+<div class="container">
+<div class="bootstrap_region">
 
   {% trans "<em>not provided</em>" as noinfo %}
 
   {% if shown_user.id == user.id or see_private %}
-  <a href="{% url 'users:edit' shown_user.id %}" class="btn btn-default pull-right">
+  <a href="{% url 'gcc:edit' shown_user.id %}" class="btn btn-default pull-right">
     <i class="fa fa-pencil"></i> {% trans "Edit profile" %}</a>
   {% endif %}
 
@@ -230,4 +232,7 @@
   </div>
   {% endif %}
 
+</div>
+</div>
+</section>
 {% endblock %}
