--- a/gccsite/users/templates/users/edit.html
+++ b/gccsite/users/templates/users/edit.html
@@ -1,52 +1,24 @@
-{% extends "prologin/base.html" %}
-{% load i18n %}
-{% load bootstrap django_bootstrap_breadcrumbs crispy_forms_tags %}
-
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "#TODO" %}{% trans "Members" %}{% endbreadcrumb_for %}
-  {% breadcrumb edited_user "users:profile" edited_user.id %}
-  {% breadcrumb_for "" %}{% trans "Edit" %}{% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
-
+{% extends "gcc/base.html" %}
+{% load static %}
+{% load i18n staticfiles rules %}
 {% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}{% endblock %}
-
-{% block content %}
-<h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}</h1>
-
-{% include "users/as_staff_warning.html" %}
-
-<p class="pull-right"><a href="{% url 'users:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Change password" %}</a></p>
-<p>{% trans "Don't forget to click “Save” at the bottom when you are done making changes." %}</p>
-
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  {% crispy form %}
-  <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-save"></i> {% trans "Save" %}</button>
-</form>
-
+{% block head %}
+<link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}" />
 {% endblock %}
-
-{% block extra_script %}
-  {{ block.super }}
-  <script>
-    let formGroupIds = ["id_picture", "id_avatar"];
-
-    formGroupIds.forEach(function (id) {
-      let form = $("#div_" + id);
-
-      if (form != null) {
-        $("#" + id).change(function (e) {
-          // if FileReader is supported and files isn't empty
-          if (FileReader && this.files.length > 0) {
-            let fr = new FileReader();
-            fr.onload = function () {
-              $("#div_" + id + " img")[0].src = fr.result;
-            };
-            fr.readAsDataURL(this.files[0]);
-          }
-        });
-      }
-    });
-  </script>
+{% block content %}
+<section class="wrapper">
+    <div class="container">
+        <div class="bootstrap_region">
+            <h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}</h1>
+            {% include "gcc/users/as_staff_warning.html" %}
+            <p class="pull-right"><a href="{% url 'gcc:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Change password" %}</a></p>
+            <p>{% trans "Don't forget to click “Save” at the bottom when you are done making changes." %}</p>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% crispy form %}
+                <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-save"></i> {% trans "Save" %}</button>
+            </form>
+        </div>
+    </div>
+</section>
 {% endblock %}
