--- a/gccsite/users/templates/users/edit_password.html
+++ b/gccsite/users/templates/users/edit_password.html
@@ -1,29 +1,23 @@
-{% extends "prologin/base.html" %}
+{% extends "gcc/base.html" %}
 {% load i18n %}
-{% load bootstrap django_bootstrap_breadcrumbs %}
-
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "#TODO" %}{% trans "Members" %}{% endbreadcrumb_for %}
-  {% breadcrumb edited_user "users:profile" edited_user.id %}
-  {% breadcrumb_for "users:edit" edited_user.id %}{% trans "Edit" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for "" %}{% trans "Password" %}{% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
-
+{% load bootstrap %}
 {% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}{% endblock %}
-
 {% block content %}
-<h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}</h1>
-
-{% include "users/as_staff_warning.html" %}
-
-<form method="POST" class="form-horizontal">
-  {% csrf_token %}
-  {{ form|bootstrap_horizontal }}
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <input class="btn btn-primary" type="submit" value="{% trans "Save" %}">
+<section class="wrapper">
+    <div class="container">
+        <div class="bootstrap_region">
+            <h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}</h1>
+            {% include "users/as_staff_warning.html" %}
+            <form method="POST" class="form-horizontal">
+                {% csrf_token %}
+                {{ form|bootstrap_horizontal }}
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <input class="button style3 large" type="submit" value="{% trans " Save" %}">
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
-</form>
+</section>
 {% endblock %}
