--- a/gccsite/users/templates/users/login.html
+++ b/gccsite/users/templates/users/login.html
@@ -1,46 +1,22 @@
-{% extends "prologin/base.html" %}
-{% load i18n staticfiles %}
-{% load bootstrap django_bootstrap_breadcrumbs %}
-
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "users:login" %}{% trans "Sign in" %}{% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
-
-{% block title %}{% trans "Sign in" %}{% endblock %}
-
-{% block content %}
-
-  <div class="row-fluid">
-    <div class="col-md-7">
-      <h2>{% trans "Sign in with your credentials" %}</h2>
-
-      <form method="POST" class="form-horizontal">
+{% extends "gcc/base.html" %}
+{% load i18n %}
+{% load static %}
+{% block title %}{% trans "GCC! − Sign in" %}{% endblock %}
+{% block header-popup %}
+<div id="header-popup">
+    <h2>{% trans "Sign in to your" %} <a href="{% url "home" %}">Prologin</a> {% trans "account" %}</h2>
+    <p>
+      <strong>
+          You are going to login to the <a href="{% url "home" %}">Prologin website</a>, check out the contest organized by our organisation.
+      </strong>
+    </p>
+    <form method="post">
         {% csrf_token %}
-        {{ form|bootstrap_horizontal }}
-        <input type="hidden" name="next" value="{{ next }}"/>
-
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button class="btn btn-primary" type="submit"><i
-                class="fa fa-sign-in"></i> {% trans "Sign in" %}</button>
-          </div>
+        {{ form.as_p }}
+        <div style="text-align: center">
+            <button type="submit">{% trans "Sign in" %}</button>
         </div>
-      </form>
-    </div>
-    <div class="col-md-5">
-      <h2>{% trans "Need an account?" %}</h2>
-
-      <p>{% blocktrans %}You can create a new account anytime. It's free, you just need an email
-        address.{% endblocktrans %}</p>
-
-      <p><a href="{% url 'users:register' %}" class="btn btn-success"><i
-          class="fa fa-user"></i> {% trans "Register now" %}</a></p>
-
-      <h2>{% trans "Forgot your password?" %}</h2>
-      <p>{% trans "No worries. We can send you an email to reset your password." %}</p>
-      <p><a href="{% url 'users:password_reset' %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Reset password" %}</a></p>
-    </div>
-  </div>
-
+        <input type="hidden" name="next" value="/gcc/">
+    </form>
+</div>
 {% endblock %}
