resources: hardcode logo_cube url

--- a/gccsite/gcc/templates/gcc/resources.html
+++ b/gccsite/gcc/templates/gcc/resources.html
@@ -108,7 +108,7 @@
       <section class="row irr_10rem_1fr">
         <div class="img-container">
           <a href="//prologin.org/">
-            <img src="{% static 'img/logo_cube.png' %}" />
+            <img src="https://prologin.org/static/img/logo_cube.png" />
           </a>
         </div>
         <div>
