templates: start work to fix english grammar/typos

--- a/gccsite/gcc/templates/gcc/base.html
+++ b/gccsite/gcc/templates/gcc/base.html
@@ -53,7 +53,7 @@
             <a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a>
           </li>
           <li class="{% active '^/gcc/resources/' %}">
-            <a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a>
+            <a href="{% url 'gcc:resources' %}">{% trans 'Resources' %}</a>
           </li>
           <li class="{% active '^/gcc/editions/' %}">
             <a href="{% url 'gcc:editions' %}">{% trans 'Editions' %}</a>
