--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -18,8 +18,8 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                This year, the organization of a Girls Can Code! at <strong>Nantes</strong> was delegated to the organization Adn-ouest Atlantic 2020. Meanwhile, Prologin  organizes the summer camps at <strong>Paris</strong> and <strong>Lyon</strong>.<br />
-                Those summer camps had a total of <strong>70 girls</strong> and a new practice on <strong>microcontrolers microbit</strong> is created. With the video games tutorial and some activities with the Lego robots it's a great way to practice the skills learned during the week with creativity and fun !
+                This year, the organization of a Girls Can Code! at <strong>Nantes</strong> was delegated to the organization Adn-ouest Atlantic 2020. Meanwhile, Prologin organizes the summer camps at <strong>Paris</strong> and <strong>Lyon</strong>.<br />
+                Those summer camps had a total of <strong>70 girls</strong> and a new <strong>microcontrolers microbit</strong> hands on session is created. With the video games project and some activities like the Lego robots, it's a great way to practice the skills learned during the week with creativity and fun!
                 {% endblocktrans %}
             </p>
             <div class="carousel">
@@ -41,7 +41,7 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                In 2017, Prologin challenges itself to organize 3 Girls Can Code summer camps! One at <strong>Bordeaux</strong> in July and two others at<strong>Paris</strong> and <strong>Lyon</strong> at the same time at the end of august. They received a total of <strong>52 participants</strong> !
+                In 2017, Prologin challenges itself to organize 3 Girls Can Code summer camps! One at <strong>Bordeaux</strong> in July and two others at <strong>Paris</strong> and <strong>Lyon</strong> at the same time at the end of august. They received a total of <strong>52 participants</strong>!
                 {% endblocktrans %}
             </p>
             <div class="carousel">
@@ -65,8 +65,8 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                In 2016,the  <strong>18 girls</strong> had very different levels, so the camp was split in small groups.
-                This year a new tutorial was created on <strong>Networks</strong>, where each girls creates it's own chat client !
+                In 2016, the <strong>18 girls</strong> had very different levels, so the camp was split into small groups.
+                This year a new tutorial was created on <strong>networks</strong>, where each girls creates it's own chat client!
                 {% endblocktrans %}
             </p>
             <div class="carousel">
@@ -85,7 +85,7 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                In 2015, there was <strong>12 girls</strong> taking part to the summer camps which for the first time as tutorials on <strong>web programming</strong>, and a small tutorial on <strong>video game creation</strong> with the Pygame library and even an introduction to  <strong>Linux</strong>.
+                In 2015, there was <strong>12 girls</strong> taking part to the summer camps which for the first time had tutorials on <strong>web programming</strong>, <strong>video game creation</strong> (using Pygame) and even an introduction to <strong>Linux</strong>.
                 {% endblocktrans %}
             </p>
             <div class="carousel">
@@ -104,9 +104,9 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                This first summer camp hosted <strong>10 participants</strong> for 5 days to introduce to them to programming.
-                Center around algorithmic, we learn to use abstract data structures, for example <strong>graphs</strong>.
-                Among all the participants, two in particular continue to study IT and became organizers as well.
+                This first summer camp hosted <strong>10 participants</strong> for 5 days to introduce them to programming.
+                Centered around algorithmic, they learned to use abstract data structures such as <strong>graphs</strong>.
+                Among all the participants, two in particular continued to study computer science and became organizers as well.
                 {% endblocktrans %}
             </p>
             <div class="carousel">
