homepage: add missing blocktrans

--- a/gccsite/gcc/templates/gcc/index/beginners.html
+++ b/gccsite/gcc/templates/gcc/index/beginners.html
@@ -8,7 +8,11 @@
         </div>
         <div class="col-xs-10 col-sm-12">
           <div class="desc">
-              <p>Summer camps for beginners, no prerequisites.</p>
+              <p>
+                {% blocktrans %}
+                  Summer camps for beginners, no prerequisites.
+                {% endblocktrans %}
+              </p>
           </div>
         </div>
       </div>
