--- a/gccsite/gcc/templates/gcc/index/free.html
+++ b/gccsite/gcc/templates/gcc/index/free.html
@@ -8,7 +8,11 @@
         </div>
         <div class="col-xs-10 col-sm-12">
           <div class="desc">
-              <p>Free summer camp organized by student volunteers!</p>
+            <p>
+              {% blocktrans %}
+                Free summer camp organized by student volunteers!
+              {% endblocktrans %}
+            </p>
           </div>
         </div>
       </div>
