--- a/gccsite/gcc/templates/gcc/index/projects.html
+++ b/gccsite/gcc/templates/gcc/index/projects.html
@@ -8,7 +8,10 @@
         </div>
         <div class="col-xs-10 col-sm-12">
           <div class="desc">
-              <p>Finish by creating your very own project.</p>
+              <p>
+                {% blocktrans %}
+                  Finish by creating your very own project.</p>
+                {% endblocktrans %}
           </div>
         </div>
       </div>
