news: add news subapp

--- a/gccsite/gcc/static/gcc/css/gcc.css
+++ b/gccsite/gcc/static/gcc/css/gcc.css
@@ -91,6 +91,10 @@ footer .legal {
 /*
  * Buttons
  */
+a {
+    color: #2ea297ff;
+}
+
 .btn-primary {
     background-color: #1d655e;
     color: #ffffff;
